methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:42: error: '=>' expected but '}' found.
    }
    ^