methods.picture.MethodsPicture.scala.code
var jaune:Color=Color.yellow;
var bleu:Color=Color.blue;
var vert:Color=Color.green;
var rouge:Color=Color.red;


/**
faireV permet de faire un V avec la couleur sp?cifi?e
attention ? l'emplacement, il le fait en avancant
sur sa gauche
											O
exemple:       -->   O O
										 ^
                    il commence ici orient? vers la droite
                    finit deux cases plus loin orient? vers la droite en ayant form? le v 
                    dans la couleur demand?e

*/
def faireV(c:Color){
  setCouleurBrosse(c);
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  recule();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
}


//permet de faire les contours dans un premier temps
def contours(){
  
  for(i <- 1 to 4){
    i match{
      case i 
    }
  }
  avance();
  faireV(jaune);
  
}






override def run() {
}